# faas-watchdog-wasmer-gpu

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: build.rs  health.rs  main.rs  utils.rs
src/config/: mod.rs  watchdog_config.rs  watchdog_mode.rs
src/contrib/: mod.rs
src/contrib/faas/: mod.rs  provider_types.rs
src/runner/: forking_runner.rs  http_runner.rs  mod.rs  serializing_fork_runner.rs  static_file_processor.rs  utils.rs  wasm_runner.rs
src/runner/wasm_runner/: compiler.rs  mod.rs  stdio.rs  thread_pool.rs
src/server/: metrics.rs  mod.rs  watchdog.rs
