[package]
name = "faas-watchdog-wasmer-gpu"
version = "0.1.0"
description = "openfass watchdog witch can run webassembly with wasmer-gpu"
authors = ["bo.yang@smail.nju.edu.cn"]
repository = "https://github.com/yanghaku/faas-watchdog-wasmer-gpu"
license = "Apache-2.0"
edition = "2021"
build = "src/build.rs"


[dependencies]
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
env_logger = { version = "0.9", default-features = false }
hyper = { version = "0.14", default-features = false, features = ["server", "http1", "http2", "runtime"] }
tokio = { version = "1", default-features = false, features = ["rt", "signal"] }

wasmer = { version = ">=2.2", optional = true, default-features = false, features = ["default-llvm", "default-dylib"] }
wasmer-wasi = { version = ">=2.2", optional = true, default-features = false, features = ["host-fs", "sys", "disable-all-logging"] }
wasmer-cuda = { version = "0.2.0-dev", optional = true, default-features = false, features = ["cuda-driver", "cuda-102"], git = "ssh://git@210.28.132.171/yangbo/wasmer-cuda.git" }


[features]
default = ["wasm-cuda"]

wasm = ["wasmer", "wasmer-wasi"]
wasm-cuda = ["wasmer-cuda", "wasm"]
